--- a/index_RO_dash2_2017-06-30.html
+++ b/index_RO_dash2_2017-06-30.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Number of Temporary Activities in Certain Fields of Work, by NGOs&rsquo; Country/Region of Origin, January-June 2017</h1></div>
+<div id="header"><h1>Representative Offices’ Fields of Work by Country/Region of Origin January-June 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -189,16 +189,16 @@ padding:0px;
 
 function dashboard(id, fData){
     var barColor = '#666666';
-    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Media:"#6acaf0", Poverty:"#7dd1f2", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
+    function segColor(c){ return {Aging:"#520010", Agriculture:"#7a0018", Animals:"#a30021", Culture:"#cc0029", Capacity:"#f50031", Disabilities:"#ff1f4b", Disaster:"#ff476c", Development:"#ff708d", Education:"#ff99ad", Energy:"#ffc2ce", Environment:"#ff335c", Ethnic:"#0b536f", Health:"#0f6f95", Infrastructure:"#128aba", International:"#16a6df", Labor:"#33b7eb", Law:"#58c4ee", Poverty:"#7dd1f2", Rural:"#a2def6", Sport:"#c7ebf9", Technology:"#231f1f", Tourism:"#555555", Trade:"#999999", Women:"#d8d8d8", Youth:"#f2f2f2"
   }[c]; }
 
     // compute total for each state.
-    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Media+d.freq.Poverty+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
+    fData.forEach(function(d){d.total=d.freq.Aging+d.freq.Agriculture+d.freq.Animals+d.freq.Culture+d.freq.Capacity+d.freq.Disabilities+d.freq.Disaster+d.freq.Development+d.freq.Education+d.freq.Energy+d.freq.Environment+d.freq.Ethnic+d.freq.Health+d.freq.Infrastructure+d.freq.International+d.freq.Labor+d.freq.Law+d.freq.Poverty+d.freq.Rural+d.freq.Sport+d.freq.Technology+d.freq.Tourism+d.freq.Trade+d.freq.Women+d.freq.Youth;});
 
     // function to handle histogram.
     //USE THIS AREA TO ADJUST LOCATION OF X AXIS AND MAX BAR HEIGHT
     function histoGram(fD){
-        var hG={},    hGDim = {t: 50, r: 0, b: 110, l: 0};
+        var hG={},    hGDim = {t: 50, r: 0, b: 140, l: 0};
         hGDim.w = 500 - hGDim.l - hGDim.r,
         hGDim.h = 400 - hGDim.t - hGDim.b;
 
@@ -407,7 +407,7 @@ var tooltip = d3.select("body").append("div").attr("class", "toolTip");
     }
 
     // calculate total frequency by segment for all state.
-    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Media','Poverty','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
+    var tF = ['Aging','Agriculture','Animals','Culture','Capacity','Disabilities','Disaster','Development','Education','Energy','Environment','Ethnic','Health','Infrastructure','International','Labor','Law','Poverty','Rural','Sport','Technology','Tourism','Trade','Women','Youth'].map(function(d){
         return {type:d, freq: d3.sum(fData.map(function(t){ return t.freq[d];}))};
     });
 
@@ -436,36 +436,7 @@ var freqData=[
 	Agriculture: 0,
 	Animals: 0,
 	Culture: 0,
-	Capacity: 0,
-	Disabilities: 0,
-	Disaster: 0,
-	Development: 0,
-	Education: 0,
-	Energy: 0,
-	Environment: 0,
-	Ethnic: 0,
-	Health: 1,
-	Infrastructure: 0,
-	International: 0,
-	Labor: 0,
-	Law: 0,
-  Media: 0,
-	Poverty: 0,
-	Rural: 0,
-	Sport: 0,
-	Technology: 0,
-	Tourism: 0,
-	Trade: 0,
-	Women: 0,
-	Youth: 0}},
-{
-	origin: "Canada",
-  freq:{
-	Aging: 0,
-	Agriculture: 0,
-	Animals: 0,
-	Culture: 0,
-	Capacity: 0,
+	Capacity: 1,
 	Disabilities: 1,
 	Disaster: 0,
 	Development: 0,
@@ -473,27 +444,26 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 0,
+	Health: 2,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 1,
 	Women: 0,
-	Youth: 0}},
+	Youth: 1}},
 {
-	origin: "France",
-  freq:{
+	origin: "Canada",
+	freq:{
 	Aging: 0,
-	Agriculture: 0,
+	Agriculture: 1,
 	Animals: 0,
-	Culture: 1,
+	Culture: 0,
 	Capacity: 0,
 	Disabilities: 0,
 	Disaster: 0,
@@ -502,81 +472,22 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 1,
+	Health: 0,
 	Infrastructure: 0,
-	International: 1,
+	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 1,
 	Women: 0,
 	Youth: 0}},
 {
-	origin: "Germany",
-  freq:{
-  Aging: 0,
-  Agriculture: 0,
-  Animals: 0,
-  Culture: 0,
-  Capacity: 0,
-  Disabilities: 1,
-  Disaster: 0,
-  Development: 0,
-  Education: 2,
-  Energy: 0,
-  Environment: 1,
-  Ethnic: 0,
-  Health: 0,
-  Infrastructure: 1,
-  International: 3,
-  Labor: 1,
-  Law: 0,
-  Media: 0,
-  Poverty: 1,
-  Rural: 2,
-  Sport: 0,
-  Technology: 1,
-  Tourism: 0,
-  Trade: 1,
-  Women: 0,
-  Youth: 1}},
-{
-	origin: "Hong Kong",
-  freq:{
-	Aging: 2,
-	Agriculture: 2,
-	Animals: 0,
-	Culture: 1,
-	Capacity: 7,
-	Disabilities: 0,
-	Disaster: 14,
-	Development: 0,
-	Education: 24,
-	Energy: 1,
-	Environment: 7,
-	Ethnic: 1,
-	Health: 6,
-	Infrastructure: 5,
-	International: 0,
-	Labor: 0,
-	Law: 0,
-  Media: 0,
-	Poverty: 19,
-	Rural: 5,
-	Sport: 1,
-	Technology: 0,
-	Tourism: 0,
-	Trade: 0,
-	Women: 2,
-	Youth: 28}},
-{
-	origin: "Japan",
-  freq:{
+	origin: "Denmark",
+	freq:{
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
@@ -587,54 +498,24 @@ var freqData=[
 	Development: 0,
 	Education: 0,
 	Energy: 0,
-	Environment: 1,
+	Environment: 0,
 	Ethnic: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 1,
-	Labor: 0,
-	Law: 0,
-  Media: 0,
-	Poverty: 0,
-	Rural: 0,
-	Sport: 0,
-	Technology: 0,
-	Tourism: 0,
-	Trade: 0,
-	Women: 0,
-	Youth: 0}},
-{
-	origin: "South Korea",
-  freq:{
-	Aging: 0,
-	Agriculture: 0,
-	Animals: 0,
-	Culture: 0,
-	Capacity: 0,
-	Disabilities: 0,
-	Disaster: 0,
-	Development: 0,
-	Education: 0,
-	Energy: 0,
-	Environment: 1,
-	Ethnic: 0,
-	Health: 1,
-	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 1,
 	Women: 0,
 	Youth: 0}},
 {
-	origin: "Sweden",
-  freq:{
+	origin: "France",
+	freq:{
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
@@ -647,23 +528,78 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 0,
+	Health: 1,
 	Infrastructure: 0,
 	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
-	Trade: 0,
+	Trade: 2,
 	Women: 0,
-	Youth: 0}},
+	Youth: 1}},
 {
-	origin: "Taiwan",
-  freq:{
+	origin: "Germany",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 1,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 3,
+	Education: 4,
+	Energy: 0,
+	Environment: 4,
+	Ethnic: 1,
+	Health: 2,
+	Infrastructure: 0,
+	International: 8,
+	Labor: 2,
+	Law: 2,
+	Poverty: 0,
+	Rural: 1,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 2,
+	Women: 1,
+	Youth: 4}},
+{
+	origin: "Hong Kong",
+	freq:{
+	Aging: 1,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 6,
+	Capacity: 4,
+	Disabilities: 1,
+	Disaster: 13,
+	Development: 0,
+	Education: 10,
+	Energy: 0,
+	Environment: 1,
+	Ethnic: 1,
+	Health: 7,
+	Infrastructure: 3,
+	International: 3,
+	Labor: 3,
+	Law: 0,
+	Poverty: 11,
+	Rural: 1,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 6,
+	Women: 0,
+	Youth: 10}},
+{
+	origin: "India",
+	freq:{
 	Aging: 0,
 	Agriculture: 0,
 	Animals: 0,
@@ -678,10 +614,9 @@ var freqData=[
 	Ethnic: 0,
 	Health: 0,
 	Infrastructure: 0,
-	International: 1,
+	International: 0,
 	Labor: 0,
 	Law: 0,
-  Media: 0,
 	Poverty: 0,
 	Rural: 0,
 	Sport: 0,
@@ -689,152 +624,371 @@ var freqData=[
 	Tourism: 0,
 	Trade: 1,
 	Women: 0,
-	Youth: 1}},
-  {
-  	origin: "Thailand",
-    freq:{
-  	Aging: 0,
-  	Agriculture: 0,
-  	Animals: 0,
-  	Culture: 0,
-  	Capacity: 0,
-  	Disabilities: 0,
-  	Disaster: 0,
-  	Development: 0,
-  	Education: 0,
-  	Energy: 0,
-  	Environment: 0,
-  	Ethnic: 0,
-  	Health: 0,
-  	Infrastructure: 0,
-  	International: 0,
-  	Labor: 0,
-  	Law: 0,
-    Media: 0,
-  	Poverty: 0,
-  	Rural: 1,
-  	Sport: 0,
-  	Technology: 0,
-  	Tourism: 2,
-  	Trade: 0,
-  	Women: 0,
-  	Youth: 0}},
+	Youth: 0}},
 {
-	origin: "The Netherlands",
-  freq:{
-  Aging: 0,
-  Agriculture: 2,
-  Animals: 0,
-  Culture: 0,
-  Capacity: 2,
-  Disabilities: 0,
-  Disaster: 0,
-  Development: 0,
-  Education: 0,
-  Energy: 0,
-  Environment: 0,
-  Ethnic: 0,
-  Health: 0,
-  Infrastructure: 0,
-  International: 0,
-  Labor: 0,
-  Law: 0,
-  Media: 0,
-  Poverty: 0,
-  Rural: 2,
-  Sport: 0,
-  Technology: 0,
-  Tourism: 0,
-  Trade: 0,
-  Women: 0,
-  Youth: 0}},
+	origin: "Japan",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 1,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 1,
+	Tourism: 1,
+	Trade: 11,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "Macau",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 2,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Women: 0,
+	Youth: 1}},
+{
+	origin: "Malaysia",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "Mongolia",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "New Zealand",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "Russia",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "South Korea",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 1,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 3,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 1,
+	Tourism: 0,
+	Trade: 11,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "Spain",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "Switzerland",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 1,
+	Development: 1,
+	Education: 1,
+	Energy: 0,
+	Environment: 2,
+	Ethnic: 0,
+	Health: 1,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+	Poverty: 1,
+	Rural: 1,
+	Sport: 1,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 1}},
+{
+	origin: "Taiwan",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 3,
+	Women: 0,
+	Youth: 0}},
+{
+	origin: "United Arab Emirates",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}},
 {
 	origin: "United Kingdom",
-  freq:{
-  Aging: 0,
-  Agriculture: 0,
-  Animals: 0,
-  Culture: 0,
-  Capacity: 0,
-  Disabilities: 0,
-  Disaster: 0,
-  Development: 0,
-  Education: 0,
-  Energy: 0,
-  Environment: 0,
-  Ethnic: 0,
-  Health: 0,
-  Infrastructure: 1,
-  International: 0,
-  Labor: 0,
-  Law: 0,
-  Media: 0,
-  Poverty: 1,
-  Rural: 0,
-  Sport: 0,
-  Technology: 0,
-  Tourism: 0,
-  Trade: 0,
-  Women: 0,
-  Youth: 0}},
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 2,
+	Development: 0,
+	Education: 2,
+	Energy: 0,
+	Environment: 1,
+	Ethnic: 0,
+	Health: 3,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 2,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 2,
+	Women: 0,
+	Youth: 1}},
 {
 	origin: "United States",
-  freq:{
-  Aging: 0,
-  Agriculture: 0,
-  Animals: 2,
-  Culture: 1,
-  Capacity: 0,
-  Disabilities: 4,
-  Disaster: 0,
-  Development: 0,
-  Education: 2,
-  Energy: 0,
-  Environment: 2,
-  Ethnic: 0,
-  Health: 5,
-  Infrastructure: 1,
-  International: 2,
-  Labor: 1,
-  Law: 0,
-  Media: 1,
-  Poverty: 2,
-  Rural: 0,
-  Sport: 0,
-  Technology: 2,
-  Tourism: 0,
-  Trade: 0,
-  Women: 1,
-  Youth: 8}},
-  {
-  	origin: "Vietnam",
-    freq:{
-    Aging: 0,
-    Agriculture: 0,
-    Animals: 0,
-    Culture: 0,
-    Capacity: 0,
-    Disabilities: 0,
-    Disaster: 0,
-    Development: 0,
-    Education: 1,
-    Energy: 0,
-    Environment: 0,
-    Ethnic: 0,
-    Health: 0,
-    Infrastructure: 0,
-    International: 0,
-    Labor: 0,
-    Law: 0,
-    Media: 0,
-    Poverty: 0,
-    Rural: 0,
-    Sport: 0,
-    Technology: 0,
-    Tourism: 0,
-    Trade: 0,
-    Women: 0,
-    Youth: 0}},
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 2,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 3,
+	Disaster: 2,
+	Development: 3,
+	Education: 10,
+	Energy: 1,
+	Environment: 5,
+	Ethnic: 0,
+	Health: 9,
+	Infrastructure: 1,
+	International: 3,
+	Labor: 0,
+	Law: 0,
+	Poverty: 1,
+	Rural: 0,
+	Sport: 0,
+	Technology: 1,
+	Tourism: 0,
+	Trade: 16,
+	Women: 1,
+	Youth: 6}}
 ]
 ;
 
@@ -842,6 +996,6 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Any given temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>In our categorization scheme, each organization carrying out a temporary activity in China has only one country or region of origin.</li></ul></em>");
+.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>Each representative office has only one country or region or origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
 
 </script>
