--- a/index_RO_dash1.html
+++ b/index_RO_dash1.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-July 2017</h1></div>
+<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-August 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -430,30 +430,30 @@ var freqData=[
 	freq:{
 	Aging: 0,
 	Agriculture: 0,
-	Animals: 1,
-	Culture: 4,
-	Capacity: 4,
-	Disabilities: 2,
-	Disaster: 8,
+	Animals: 2,
+	Culture: 5,
+	Capacity: 5,
+	Disabilities: 3,
+	Disaster: 9,
 	Development: 6,
-	Education: 17,
+	Education: 20,
 	Energy: 1,
-	Environment: 12,
+	Environment: 14,
 	Ethnic: 1,
-	Health: 14,
+	Health: 16,
 	Infrastructure: 1,
-	International: 11,
-	Labor: 1,
+	International: 14,
+	Labor: 2,
 	Law: 2,
-	Poverty: 5,
+	Poverty: 6,
 	Religion: 0,
 	Rural: 0,
 	Sport: 1,
 	Technology: 0,
 	Tourism: 1,
-	Trade: 20,
+	Trade: 27,
 	Women: 3,
-	Youth: 12}
+	Youth: 13}
 	},
 {
 	Province: "Chongqing",
@@ -503,7 +503,7 @@ var freqData=[
   	Health: 0,
   	Infrastructure: 0,
   	International: 2,
-  	Labor: 0,
+  	Labor: 1,
   	Law: 0,
   	Poverty: 0,
   	Religion: 1,
@@ -513,7 +513,7 @@ var freqData=[
   	Tourism: 0,
   	Trade: 1,
   	Women: 0,
-  	Youth: 1}
+  	Youth: 2}
   	},
 
 {
@@ -561,20 +561,20 @@ var freqData=[
 	Energy: 0,
 	Environment: 0,
 	Ethnic: 0,
-	Health: 1,
+	Health: 2,
 	Infrastructure: 0,
-	International: 2,
+	International: 3,
 	Labor: 1,
 	Law: 0,
 	Poverty: 3,
 	Religion: 0,
-	Rural: 0,
+	Rural: 1,
 	Sport: 0,
 	Technology: 0,
 	Tourism: 0,
 	Trade: 6,
 	Women: 0,
-	Youth: 2}
+	Youth: 3}
 	},
 {
 	Province: "Guangxi",
@@ -666,6 +666,38 @@ var freqData=[
 	Women: 0,
 	Youth: 0}
 	},
+	
+	{
+	Province: "Henan",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 1,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 1,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 1,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}
+	},
+	
 {
 	Province: "Hubei",
 	freq:{
@@ -726,6 +758,38 @@ var freqData=[
 	Women: 0,
 	Youth: 2}
 	},
+	
+	{
+	Province: "Inner Mongolia",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 1,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Rural: 0,
+	Religion: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 0,
+	Women: 0,
+	Youth: 0}
+	},
+	
 {
 	Province: "Jiangsu",
 	freq:{
@@ -811,8 +875,8 @@ var freqData=[
 	Rural: 0,
 	Sport: 0,
 	Technology: 0,
-	Tourism: 0,
-	Trade: 5,
+	Tourism: 1,
+	Trade: 6,
 	Women: 0,
 	Youth: 0}
 	},
@@ -944,7 +1008,7 @@ var freqData=[
 	Animals: 0,
 	Culture: 1,
 	Capacity: 0,
-	Disabilities: 2,
+	Disabilities: 3,
 	Disaster: 1,
 	Development: 0,
 	Education: 1,
@@ -956,7 +1020,7 @@ var freqData=[
 	International: 2,
 	Labor: 2,
 	Law: 0,
-	Poverty: 1,
+	Poverty: 2,
 	Religion: 0,
 	Rural: 0,
 	Sport: 0,
@@ -964,7 +1028,7 @@ var freqData=[
 	Tourism: 1,
 	Trade: 4,
 	Women: 0,
-	Youth: 2}
+	Youth: 3}
 	},
 {
 	Province: "Tibet",
@@ -1025,6 +1089,36 @@ var freqData=[
 	Trade: 0,
 	Women: 1,
 	Youth: 6}
+	},
+	{
+	Province: "Zhejiang",
+	freq:{
+	Aging: 0,
+	Agriculture: 0,
+	Animals: 0,
+	Culture: 0,
+	Capacity: 0,
+	Disabilities: 0,
+	Disaster: 0,
+	Development: 0,
+	Education: 0,
+	Energy: 0,
+	Environment: 0,
+	Ethnic: 0,
+	Health: 0,
+	Infrastructure: 0,
+	International: 0,
+	Labor: 0,
+	Law: 0,
+	Poverty: 0,
+	Religion: 0,
+	Rural: 0,
+	Sport: 0,
+	Technology: 0,
+	Tourism: 0,
+	Trade: 1,
+	Women: 0,
+	Youth: 0}
 	}
 ]
 ;
